# MobiRent

./: README.md  cargo.toml
mobirent_cli/: Cargo.toml
mobirent_lib/: Cargo.toml
mobirent_lib/src/: lib.rs
