[package]
name = "mobirent_lib"
version = "0.1.0"
edition = "2024"
authors = ["Harsh Agarwal <agarwalharsh244@gmail.com>"]
description = "Core library for Mobirent car rental system — implements proxy, cache, telemetry, and async fleet access."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
